# Pac-Map

./: .gitignore  README.md  Roadmap.md  SCORE_INTEGRATION_GUIDE.md  debug-google-oauth.html  debug-main-page.js  debug.html  google-auth-example.html  index.html  minimal_test.html  mobile-debug.html  simple-login-test.html  simple-test-sync.html  simple_test.html  test-config-system.html  test-login.html  test-mobile-controls.html  test-modules.html  test-score-integration.html  test-sync-and-local-records.html  test.html  test_score_upload.html  test_validation.json
.cursor/rules/: instruction.mdc
backend/: .env.example  .gitignore  GOOGLE_OAUTH_SETUP.md  README.md  debug_leaderboard.py  diagnose_oauth.py  pac_map_db.json  pyproject.toml  start_server.py  test_api.py  test_direct_api.py  test_import.py
backend/cache/maps/: map_0.json
backend/src/: auth.py  config.py  database.py  game_validation_service.py  main.py  map_service.py  models.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
js/: ai.js  audio.js  auth.js  background.js  backgroundAnimation.js  config.js  devConsole.js  game.js  gameState.js  gameValidationService.js  main.js  map.js  mapService.js  mobileControls.js  settings.js  ui.js
